--- a/templates/plan.html
+++ b/templates/plan.html
@@ -24,7 +24,7 @@
     ryhmän alustavia suunnitelmia..
     {% if not week[i][1] %}
         <select name="no_entries">
-            <option> " - " 
+            <option> ei ilmoittautumisia vielä  
         </select>
     {% else: %}
         <select name="entries">
