--- a/templates/settings.html
+++ b/templates/settings.html
@@ -267,8 +267,9 @@ Lyhyt viesti, joka näkyy jäsenille ensimmäisen viikon näkymässä ja on päi
 <!----------------------------------------------------------------------------->
 <form action="/settings/admin/management_users" method="POST">
 <h2>Jäsenten hallinta</h2>
+##tämä vielä keskeneräinen: haku ja jäsenlistan järjestyksen muokkaus vai linkki? nyt linkki toimii..
 <p>
-    <a href="/settings/admin/user_changes">Tarkastele ja muuta jäsenien asetuksia</a>
+    <a href="/settings/admin/userlist">Tarkastele ja muuta jäsenien asetuksia</a>
 <p>
 voit:
 <ul>
