--- a/templates/entry.html
+++ b/templates/entry.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<h2>Ilmoittautuminen</h2>
+<h2>menossa mukana</h2>
 <form action="/entry/{{day}}" method="POST">
 <p>
 <!--@app.route("/entry/<day>", methods=["GET","POST"])
@@ -15,24 +15,26 @@ def entry(day):
         return render_template("entry.html", events=event_list, date=date, day=day)
 -->
 <!--listalla: e.id, e.name, e.description, e.min_participants, e.max_participants, e.event_level-->
-<h4>tapahtumaan {{date.strftime('%d. %m.')}}</h4>
-<p>
+<h4>{{date.strftime('%d. %m.')}}</h4>
+#pvm, event.name, alkuaika, loppuaika, dow, day, i
+<b>valitse tapahtuma:<b>
 <select name="event_id">
     {% for event in events %}
     <option value={{event[0]}}> {{event[1]}}
     {% endfor %}            
 </select>
 <p>
-Osallistun klo:    
+<b>valitse kellonaika:<b>
 <input type="time" name="time1">
 <input type="time" name="time2">
 <p>
+<b>mukanani tulee lisäosallistujia:</b>
+<input type="number" name="extra_participants" min="0" max="99" value="0">
 TÄHÄN vielä ekstrojen ilmoittautuminen
 <p>
-TÄHÄN viikottainen vakioaika?
-<p>
-Lisää lyhyt kommentti: <br>
-<input type="text" name="comment" maxlength="150">
+kommentti osallistumiseeni liittyen: <br>
+<input type="text" name="comment" maxlength="150"><br>
+(kommentti näkyy myös kalenterisivun keskustelussa mukana)
 <p> 
 Osallistujat tänään:
 <ul>
