--- a/templates/register.html
+++ b/templates/register.html
@@ -19,7 +19,8 @@ Liittymissalasana: <br><input type="password" name="password_group">
     (saat liittymissalasanan ryhmän jäseneltä tai ryhmän adminilta, <br>
     ryhmän tsoha salasana on tsoha)
 <p>
-<b>Valitse tapahtumat, joihin osallistut:</b>
+<b>Valitse kaikki tapahtumat, joihin mahdollisesti saatat osallistua:<br>
+</b>(oletuksena on valittu kaikki)
 {% for i in range(events|length) %}
 <p>   <input type="checkbox" name="event_checked" value="{{events[i][0]}}" checked> {{events[i][1]}}
 {% endfor %}
