--- a/templates/userlist.html
+++ b/templates/userlist.html
@@ -93,7 +93,7 @@ aktiivisuus tapahtumaan 5 = admin poistanut jäseneltä oikeuden osallistua, tap
      <td> {{user_info[4].strftime("%d.%m.%Y")}} </td>
      <td> {{user_info[5]}} </td>
      <td> {{user_info[6]}} </td>
-     <td> {{user_info[7]}} </tr>
+     <td> {{user_info[7]}} </td>
      <td> {{user_info[8]}} </td>
     </tr>
     {% endfor %}
